--- a/src/sass/_random_cocktails.scss
+++ b/src/sass/_random_cocktails.scss
@@ -1,104 +1,213 @@
-.gallery {
+// li {
+//     list-style: none;
+// }
+
+// img {
+//     display: block;
+// }
+
+// .coctails__title {
+//     font-family: 'Poppins';
+//     font-weight: 600;
+//     font-size: 22px;
+//     line-height: calc(42 / 22);
+//     text-align: center;
+//     color: #202025;
+
+//     display: block;
+//     margin: 0 auto 60px auto;
+
+//     @media screen and (min-width: 1280px) {
+//         font-size: 48px;
+//         line-height: calc(72 / 48);
+//     }
+// }
+
+// .coctails__list {
+//     margin: 0;
+//     padding: 0;
+//     justify-content: center;
+//     display: flex;
+//     flex-wrap: wrap;
+//     gap: 20px;
+
+//     @media screen and (min-width: 768px) {
+//         gap: 32px;
+//     }
+// }
+
+// .coctails__item {
+//     display: block;
+//     margin: 0;
+//     max-width: 280px;
+//     height: 450px;
+
+//     border: 1px solid #FD5103;
+//     border-radius: 4px;
+//     overflow: hidden;
+
+//     @media screen and (min-width: 768px) {
+//         max-width: 335px;
+//         height: 541px;
+//     }
+
+//     @media screen and (min-width: 1280px) {
+//         max-width: 394px;
+//         height: 556px;
+//     }
+// }
+
+// .coctails__img {
+//     margin: 0 0 48px 0;
+//     max-width: 280px;
+//     height: auto;
+
+//     @media screen and (min-width: 768px) {
+//         max-width: 335px;
+//         height: 395px;
+//         margin-bottom: 20px;
+//     }
+
+//     @media screen and (min-width: 1280px) {
+//         max-width: 395px;
+//         height: 395px;
+//     }
+// }
+
+// .coctails__name {
+//     font-family: 'Roboto';
+//     font-weight: 900;
+//     font-size: 26px;
+//     line-height: calc(42 / 26);
+//     text-align: center;
+//     color: #202025;
+//     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+//     @media screen and (min-width: 768px) {
+//         line-height: calc(33 / 26);
+//     }
+
+//     @media screen and (min-width: 1280px) {
+//         font-size: 32px;
+//         line-height: calc(38 / 32);
+//     }
+// }
+
+// .btn__learn {
+//     font-family: 'Roboto';
+//     font-weight: 400;
+//     font-size: 14px;
+//     line-height: calc(24 / 14);
+//     text-align: center;
+//     letter-spacing: 0.02em;
+//     color: #FFFFFF;
+//     background: #FE7031;
+//     border-radius: 4px;
+//     border: 1px solid transparent;
+
+//     width: 108px;
+//     ... (40 lines left)
+// / .gallery {
   
-}
+// // }
 
-.cocktail-card {
+// // .cocktail-card {
 
-   height: 556px;
-    flex-basis: calc((100% - 64px) / 3);
+// //    height: 556px;
+// //     flex-basis: calc((100% - 64px) / 3);
    
     
-    &:hover,
-    &:focus {
-        transform: scale(1.08);
-    }
-}
+// //     &:hover,
+// //     &:focus {
+// //         transform: scale(1.08);
+// //     }
+// // }
 
-.gallery__image {
-       object-fit: cover;
-    overflow: hidden;
-}
+// // .gallery__image {
+// //        object-fit: cover;
+// //     overflow: hidden;
+// // }
 
-.info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-    color: rgb(93, 12, 93);
-}
+// // .info {
+// //     display: flex;
+// //     align-items: center;
+// //     justify-content: space-between;
+// //     padding: 15px;
+// //     color: rgb(93, 12, 93);
+// // }
 
-.info-item {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+// // .info-item {
+// //     display: flex;
+// //     flex-direction: column;
+// //     text-align: center;
 
-}
+// // }
 
-.load-more {
-    width: 160px;
-    height: 40px;
-    margin-top: 50px;
-    margin-bottom: 30px;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    font-size: 20px;
-    font-weight: 600;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    color: rgb(25, 25, 25);
-    background-color: gainsboro;
+// // .load-more {
+// //     width: 160px;
+// //     height: 40px;
+// //     margin-top: 50px;
+// //     margin-bottom: 30px;
+// //     margin-left: 50%;
+// //     transform: translateX(-50%);
+// //     font-size: 20px;
+// //     font-weight: 600;
+// //     border: none;
+// //     border-radius: 8px;
+// //     cursor: pointer;
+// //     color: rgb(25, 25, 25);
+// //     background-color: gainsboro;
 
-    &:hover,
-    &:focus {
-        color: rgb(58, 56, 56);
-        background-color: rgb(115, 120, 175);
-    }
+// //     &:hover,
+// //     &:focus {
+// //         color: rgb(58, 56, 56);
+// //         background-color: rgb(115, 120, 175);
+// //     }
 
-}
+// // }
 
-// .btn-to-top {
-//     position: fixed;
-//     bottom: 3vh;
-//     right: 1vw;
-//     z-index: 1000;
-//     width: 50px;
-//     height: 50px;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     border-radius: 50%;
-//     border-color: rgb(115, 120, 175);
-//     border-style: groove;
-//     background: rgba(216, 217, 227, 0.5);
-//     ;
-//     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-//     color: rgb(0, 0, 0);
-//     cursor: pointer;
-//     opacity: 0;
-//     visibility: hidden;
-//     font-weight: 700;
-// }
+// // // .btn-to-top {
+// // //     position: fixed;
+// // //     bottom: 3vh;
+// // //     right: 1vw;
+// // //     z-index: 1000;
+// // //     width: 50px;
+// // //     height: 50px;
+// // //     display: flex;
+// // //     align-items: center;
+// // //     justify-content: center;
+// // //     border-radius: 50%;
+// // //     border-color: rgb(115, 120, 175);
+// // //     border-style: groove;
+// // //     background: rgba(216, 217, 227, 0.5);
+// // //     ;
+// // //     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+// // //     color: rgb(0, 0, 0);
+// // //     cursor: pointer;
+// // //     opacity: 0;
+// // //     visibility: hidden;
+// // //     font-weight: 700;
+// // // }
 
-// .btn-to-top--visible {
-//     opacity: 1;
-//     visibility: visible;
-// }
+// // // .btn-to-top--visible {
+// // //     opacity: 1;
+// // //     visibility: visible;
+// // // }
 
-// .btn-to-top:hover {
-//     background-color: #c3c3c3;
-//     transition: all 0.3s;
-// }
+// // // .btn-to-top:hover {
+// // //     background-color: #c3c3c3;
+// // //     transition: all 0.3s;
+// // // }
 
-// .spinner {
-//     display: inline-block;
-//     width: 1.2rem;
-//     height: 1.2rem;
-//     margin-right: 8px;
-//     background-image: url(../images/spinner.gif);
-//     background-size: contain;
-// }
+// // // .spinner {
+// // //     display: inline-block;
+// // //     width: 1.2rem;
+// // //     height: 1.2rem;
+// // //     margin-right: 8px;
+// // //     background-image: url(../images/spinner.gif);
+// // //     background-size: contain;
+// // // }
 
-// .spinner.is-hidden {
-//     display: none;
-// }
+// // // .spinner.is-hidden {
+// // //     display: none;
+// // // }
